--- a/Cardiovascular-Imaging.BusinessLogic/Cardiovascular-Imaging.BusinessLogic.csproj
+++ b/Cardiovascular-Imaging.BusinessLogic/Cardiovascular-Imaging.BusinessLogic.csproj
@@ -46,6 +46,8 @@
     <Compile Include="BitmapExtensions.cs" />
     <Compile Include="Pixel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RadialGradient.cs" />
+    <Compile Include="StentLocationHelper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
